# pi-pico-serial

./: .gitignore  CMakeLists.txt  hello_serial.c  readme.md
